# cmd/server/main.go
@@ -2,14 +2,17 @@ package main
 
 import (
 	"aastar_dashboard_back/config"
+	"aastar_dashboard_back/data_view_repository"
 	"aastar_dashboard_back/docs"
 	"aastar_dashboard_back/env"
+	"aastar_dashboard_back/model"
 	"aastar_dashboard_back/repository"
 	"aastar_dashboard_back/rpc_server/controller"
 	"aastar_dashboard_back/rpc_server/controller/oauth"
 	"aastar_dashboard_back/rpc_server/middlewares"
 	"flag"
 	"io"
+	"net/http"
 	"os"
 	"strings"
 	"time"
@@ -60,12 +63,20 @@ func main() {
 	buildMod(engine)
 	buildSwagger(engine)
 
+	engine.Use(middlewares.GenericRecoveryHandler())
+	engine.Use(middlewares.LogHandler())
 	oauth.Init()
 	repository.Init()
+	data_view_repository.Init()
 	engine.GET("/api/healthz", Healthz)
 	buildOAuth()
 	buildMid()
 	buildRouter()
+
+	engine.NoRoute(func(ctx *gin.Context) {
+		model.GetResponse().SetHttpCode(http.StatusNotFound).FailCode(ctx, http.StatusNotFound)
+	})
+
 	_ = engine.Run(getPort())
 }
 
@@ -78,10 +89,6 @@ func getConfigPath() string {
 	return configPath
 }
 func buildMid() {
-	engine.Use(middlewares.GenericRecoveryHandler())
-	if env.Environment.IsDevelopment() {
-		engine.Use(middlewares.LogHandler())
-	}
 	engine.Use(middlewares.CorsHandler())
 	engine.Use(middlewares.AuthHandler())
 }
@@ -92,7 +99,7 @@ func buildRouter() {
 	engine.PUT("/api/v1/paymaster_strategy", controller.UpdateStrategy)
 	engine.POST("/api/v1/paymaster_strategy", controller.AddStrategy)
 	engine.DELETE("/api/v1/paymaster_strategy", controller.DeleteStrategy)
-
+	engine.PUT("/api/v1/paymaster_strategy/switch_status", controller.SwitchStrategyStatus)
 	engine.GET("/api/v1/api_key/list", controller.GetApiKeyList)
 	engine.GET("/api/v1/api_key", controller.GetApiKey)
 	engine.PUT("/api/v1/api_key", controller.UpdateApiKey)
@@ -101,6 +108,17 @@ func buildRouter() {
 
 	engine.GET("/api/v1/user", controller.GetUserInfo)
 
+	engine.POST("/api/v1/sponsor/deposit", controller.SponsorDeposit)
+	engine.POST("/api/v1/sponsor/withdraw", controller.SponsorWithdraw)
+	engine.GET("/api/v1/data/sponsor_transactions", controller.DataViewGetSponsorTransactionList)
+	engine.GET("/api/v1/data/paymaster_requests", controller.DataViewApiKeyPaymasterRecallDetailList)
+	engine.GET("/api/v1/data/api_detail_data/apikey_request_total_data", controller.DataViewApiKeyPaymasterRecallDetailList)
+	engine.GET("/api/v1/data/request_health_list", controller.DataViewRequestHealth)
+	engine.GET("/api/v1/data/request_health_one", controller.DataViewRequestHealthOneByApiKey)
+	engine.GET("/api/v1/data/balance", controller.DataViewGetBalance)
+	engine.GET("/api/v1/data/sponsored_metrics", controller.DataViewSponsoredMetrics)
+	engine.GET("/api/v1/data/api_keys_data_overview", controller.DataViewApiKeysOverView)
+	engine.GET("/api/v1/data/paymaster_pay_type_metrics", controller.DataViewPaymasterPayTypeMetrics)
 }
 
 // buildMod set Mode by Environment
