# rpc_server/controller/key_api.go
@@ -3,10 +3,71 @@ package controller
 import (
 	"aastar_dashboard_back/model"
 	"aastar_dashboard_back/repository"
+	"encoding/json"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
+	"net/http"
 	"strconv"
 )
+
+type APIKeyVo struct {
+	ProjectCode                   string        `json:"project_code"`
+	Disable                       bool          `json:"disable"`
+	UserId                        int64         `json:"user_id"`
+	ApiKey                        string        `json:"api_key"`
+	KeyName                       string        `json:"key_name"`
+	NetWorkLimitEnable            bool          `json:"network_limit_enable"`
+	DomainWhitelist               []interface{} `json:"domain_whitelist"`
+	IPWhiteList                   []interface{} `json:"ip_white_list"`
+	PaymasterEnable               bool          `json:"paymaster_enable"`
+	Erc20PaymasterEnable          bool          `json:"erc20_paymaster_enable"`
+	ProjectSponsorPaymasterEnable bool          `json:"project_sponsor_paymaster_enable"`
+	UserPayPaymasterEnable        bool          `json:"user_pay_paymaster_enable"`
+}
+
+func convertAPiKeyDBModelToAPIKeyVo(apiKeyModel *model.ApiKeyModel) (*APIKeyVo, error) {
+	apiKeyVo := APIKeyVo{
+		ProjectCode: apiKeyModel.ProjectCode,
+		Disable:     apiKeyModel.Disable,
+		UserId:      apiKeyModel.UserId,
+		ApiKey:      apiKeyModel.ApiKey,
+		KeyName:     apiKeyModel.KeyName,
+	}
+	extra := make(map[string]any)
+	if apiKeyModel.Extra == nil {
+		return &apiKeyVo, nil
+	}
+	err := json.Unmarshal(apiKeyModel.Extra, &extra)
+	if err != nil {
+		return &apiKeyVo, err
+	}
+	if extra["network_limit_enable"] != nil {
+
+		apiKeyVo.NetWorkLimitEnable = extra["network_limit_enable"].(bool)
+
+	}
+	if extra["domain_whitelist"] != nil {
+		apiKeyVo.DomainWhitelist = extra["domain_whitelist"].([]interface{})
+	}
+	if extra["ip_white_list"] != nil {
+		iPWhiteList := extra["ip_white_list"].([]interface{})
+
+		apiKeyVo.IPWhiteList = iPWhiteList
+	}
+	if extra["paymaster_enable"] != nil {
+		apiKeyVo.PaymasterEnable = extra["paymaster_enable"].(bool)
+	}
+	if extra["erc20_paymaster_enable"] != nil {
+		apiKeyVo.Erc20PaymasterEnable = extra["erc20_paymaster_enable"].(bool)
+	}
+	if extra["project_sponsor_paymaster_enable"] != nil {
+		apiKeyVo.ProjectSponsorPaymasterEnable = extra["project_sponsor_paymaster_enable"].(bool)
+	}
+	if extra["user_pay_paymaster_enable"] != nil {
+		apiKeyVo.UserPayPaymasterEnable = extra["user_pay_paymaster_enable"].(bool)
+	}
+	return &apiKeyVo, nil
+}
 
 // GetApiKeyList
 // @Tags GetApiKeyList
@@ -24,12 +85,22 @@ func GetApiKeyList(ctx *gin.Context) {
 		response.FailCode(ctx, 400, "user_id is required")
 		return
 	}
-	apiKeys, err := repository.SelectApiKeyListByUserId(userId)
+
+	apiKeyDBModelList, err := repository.SelectApiKeyListByUserId(userId)
 	if err != nil {
 		response.FailCode(ctx, 500, err.Error())
 		return
 	}
-	response.WithDataSuccess(ctx, apiKeys)
+	apiKeyVos := make([]APIKeyVo, 0)
+	for _, apiKeyDBModel := range apiKeyDBModelList {
+		apiKeyVo, err := convertAPiKeyDBModelToAPIKeyVo(&apiKeyDBModel)
+		if err != nil {
+			response.FailCode(ctx, 500, err.Error())
+			return
+		}
+		apiKeyVos = append(apiKeyVos, *apiKeyVo)
+	}
+	response.WithDataSuccess(ctx, apiKeyVos)
 }
 
 // GetApiKey
@@ -48,12 +119,18 @@ func GetApiKey(ctx *gin.Context) {
 		response.FailCode(ctx, 400, "api_key is required")
 		return
 	}
-	apiKeyRes, err := repository.FindApiKeyByApiKey(apiKeyStr)
+	apiKeyDBModel, err := repository.FindApiKeyByApiKey(apiKeyStr)
 	if err != nil {
 		response.FailCode(ctx, 500, err.Error())
 		return
 	}
-	response.WithDataSuccess(ctx, apiKeyRes)
+
+	apiKeyVo, err := convertAPiKeyDBModelToAPIKeyVo(apiKeyDBModel)
+	if err != nil {
+		response.FailCode(ctx, 500, err.Error())
+		return
+	}
+	response.WithDataSuccess(ctx, apiKeyVo)
 }
 
 // UpdateApiKey
@@ -79,7 +156,7 @@ func UpdateApiKey(ctx *gin.Context) {
 		return
 	}
 
-	apikey, err := convertUploadRequestToApiKey(request)
+	apikey, err := convertUploadRequestToApiKey(&request)
 	if err != nil {
 		response.FailCode(ctx, 400, err.Error())
 		return
@@ -92,7 +169,7 @@ func UpdateApiKey(ctx *gin.Context) {
 	//timeNow := time.Now()
 	//timeStr := timeNow.Format(global_const.TimeFormat)
 	//apikey.UpdatedAt = timeStr
-	err = repository.UpdateApiKey(&apikey)
+	err = repository.UpdateApiKey(apikey)
 	response.WithDataSuccess(ctx, apikey)
 }
 
@@ -130,6 +207,26 @@ func ApplyApiKey(ctx *gin.Context) {
 	}
 	apiKeySecret := uuid.New().String()
 	apiKeyModule.ApiKey = apiKeySecret
+	extra := make(map[string]any)
+	if len(request.DomainWhitelist) > 0 {
+		extra["domain_whitelist"] = request.DomainWhitelist
+	}
+
+	if len(request.IPWhiteList) > 0 {
+		extra["ip_white_list"] = request.IPWhiteList
+	}
+	extra["network_limit_enable"] = request.NetWorkLimitEnable
+	extra["paymaster_enable"] = request.PaymasterEnable
+	extra["erc20_paymaster_enable"] = request.Erc20PaymasterEnable
+	extra["project_sponsor_paymaster_enable"] = request.ProjectSponsorPaymasterEnable
+	extra["user_pay_paymaster_enable"] = request.UserPayPaymasterEnable
+
+	extraJson, err := json.Marshal(extra)
+	if err != nil {
+		response.FailCode(ctx, 500, err.Error())
+		return
+	}
+	apiKeyModule.Extra = extraJson
 
 	err = repository.CreateApiKey(&apiKeyModule)
 	if err != nil {
@@ -153,7 +250,7 @@ func DeleteApiKey(ctx *gin.Context) {
 	response := model.GetResponse()
 	apiKeyStr := ctx.Query("api_key")
 	if apiKeyStr == "" {
-		response.FailCode(ctx, 400, "api_key is required")
+		response.SetHttpCode(http.StatusBadRequest).FailCode(ctx, 400, "api_key is required")
 		return
 	}
 	err := repository.DeleteApiKeyByApiKey(apiKeyStr)
@@ -164,17 +261,29 @@ func DeleteApiKey(ctx *gin.Context) {
 	response.WithDataSuccess(ctx, gin.H{})
 
 }
-func convertUploadRequestToApiKey(uploadRequest model.UploadApiKeyRequest) (apikey model.ApiKeyModel, err error) {
-	apikey = model.ApiKeyModel{
+func convertUploadRequestToApiKey(uploadRequest *model.UploadApiKeyRequest) (*model.ApiKeyModel, error) {
+	apikey := model.ApiKeyModel{
 		ApiKey:  uploadRequest.ApiKey,
 		KeyName: uploadRequest.ApiKeyName,
 	}
-	//if len(uploadRequest.ExtraInfo) > 0 {
-	//	extraInfo, err := json.Marshal(uploadRequest.ExtraInfo)
-	//	if err != nil {
-	//		return apikey, err
-	//	}
-	//	apikey.Extra = extraInfo
-	//}
-	return apikey, nil
+	extraMap := make(map[string]any)
+
+	extraMap["network_limit_enable"] = uploadRequest.NetWorkLimitEnable
+	if len(uploadRequest.DomainWhitelist) > 0 {
+		extraMap["domain_whitelist"] = uploadRequest.DomainWhitelist
+	}
+
+	if len(uploadRequest.IPWhiteList) > 0 {
+		extraMap["ip_white_list"] = uploadRequest.IPWhiteList
+	}
+	extraMap["paymaster_enable"] = uploadRequest.PaymasterEnable
+	extraMap["erc20_paymaster_enable"] = uploadRequest.Erc20PaymasterEnable
+	extraMap["project_sponsor_paymaster_enable"] = uploadRequest.ProjectSponsorPaymasterEnable
+	extraMap["user_pay_paymaster_enable"] = uploadRequest.UserPayPaymasterEnable
+	extraMapJson, err := json.Marshal(extraMap)
+	if err != nil {
+		return nil, err
+	}
+	apikey.Extra = extraMapJson
+	return &apikey, nil
 }
